<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <RadioGroup
        android:id="@+id/setting_access_type_rg"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/setting_datakit_deploy_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datakit_deploy" />

        <RadioButton
            android:id="@+id/setting_dataway_deploy_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dataway_deploy" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_app_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/app_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_app_id_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_datakit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/datakit_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_datakit_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_dataway_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/dataway_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_dataway_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_dataway_client_token_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/dataway_token">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_dataway_client_token_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/setting_demo_api_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/demo_api_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_demo_api_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/setting_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_check" />
</LinearLayout>