<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mine_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/setting_button_color_bg"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/mine_user_info_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/ic_mine_avatar_bg">

                <ImageView
                    android:id="@+id/mine_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_alignTop="@id/mine_avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="24dp"
                    android:layout_toRightOf="@id/mine_avatar"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mine_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_username"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/mine_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/default_email"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/mine_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/how_to_refresh"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>


            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="20dp"
                android:background="#ccc" />

            <LinearLayout
                android:id="@+id/mine_edit_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/setting_button_color_bg"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="16dp">


                <TextView
                    android:id="@+id/mine_settings_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/edit_setting"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/mine_settings_access_type_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sdk_access_type_format"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/setting_button_color_bg"
                android:orientation="horizontal"
                android:padding="16dp">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/setting_version"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/mine_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/app_version"
                    android:textSize="16sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="20dp"
                android:background="#ccc" />

            <LinearLayout
                android:id="@+id/mine_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/setting_button_color_bg"

                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/setting_log_out"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <!-- Add your desired settings control on the right, e.g., Switch, CheckBox, EditText, etc. -->
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#ccc" />

        </LinearLayout>
    </ScrollView>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>